# ipylisten

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo_alice.ipynb
src/ipylisten/: __init__.py  _config.py  _jupyter.py  _listen.py  _llm.py  _mic.py
